flux/apps/base/ingress/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: ingress
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.1.201"
spec:
  gatewayClassName: agentgateway
  infrastructure:
    annotations:
      metallb.universe.tf/loadBalancerIPs: "192.168.1.201"
    parametersRef:
      group: agentgateway.dev
      kind: AgentgatewayParameters
      name: ingress-gateway-otel
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.kubegit.com"
      allowedRoutes:
        namespaces:
          from: All
